--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- main styles -->
-    <link rel="stylesheet" href="/services_style.css" />
+    <link rel="stylesheet" href="styles/services_style.css" />
 
     <!-- Font-awesome -->
     <link
@@ -29,7 +29,7 @@
   <body>
     <header class="max-width">
       <div class="logo">
-        <img src="/SK_naujas.svg" alt="Sandra k logo" />
+        <img src="/assets/logo/sk_logo.svg" alt="Sandra k logo" />
       </div>
       <div class="header-nav">
         <button class="nav-btn" id="nav-btn">
@@ -76,8 +76,10 @@
           <h1>what i do</h1>
           <div class="divider">&nbsp</div>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet,
-            optio.
+            Offering a broad range of accountancy services from tax returns and
+            payroll, I am fully qualified and committed to what I do. I rely on
+            my reputation for excellence and all my clients receive the same
+            dedicated service.
           </p>
         </div>
       </div>
@@ -186,10 +188,8 @@
       <!-- nav menu -->
       <section></section>
     </main>
-    <footer>
-      
-    </footer>
+    <footer></footer>
 
-    <script src="/services.js"></script>
+    <script src="scripts/services.js"></script>
   </body>
 </html>
