reviews section completed. head, header, footer moved into php files;

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <!--CSS styles  -->
     <link rel="stylesheet" href="/styles/style.css" />
+
+    <link rel="stylesheet" href="styles/header-style.css">
+
     <title>Sandra K || Bookkeeping & Payroll Services</title>
 
     <!-- Font-awesome -->
@@ -30,7 +33,7 @@
   <body>
     <header class="max-width">
       <div class="logo">
-        <img src="/assets/logo/sk_logo.svg" alt="Sandra k logo" />
+        <a href="/index.html"><img src="/assets/logo/sk_logo.svg" alt="Sandra k logo" /></a>
       </div>
       <div class="header-nav">
         <button class="nav-btn" id="nav-btn">
@@ -70,14 +73,14 @@
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <div class="main-left">
         <div class="main-content">
           <div class="intro-content">
             <!-- <p class="intro-top">INTRO</p> -->
             <h1>Hi, I'm Sandra K, a Freelance Bookkeeper.</h1>
             <div class="intro-btn">
-              <a href="/about.html" class="about-me-btn">
+              <a href="/about.php" class="about-me-btn">
                 <i class="fas fa-greater-than"></i>
                 <p>About me</p>
               </a>
@@ -87,8 +90,8 @@
           <div class="menu-container">
             <p>menu</p>
             <nav class="lg-screen-nav">
-              <a href="/services.html" class="services menu-btn">what i do</a>
-              <a href="#" class="reviews menu-btn">reviews</a>
+              <a href="/services.php" class="services menu-btn">what i do</a>
+              <a href="/reviews.php" class="reviews menu-btn">reviews</a>
               <a href="#" class="contact menu-btn">contact</a>
               <a href="/php/login_screen.php" class="menu-btn">client zone</a>
             </nav>
